<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.jboss.demos</groupId>
	<artifactId>simpledemo</artifactId>
	<version>1.0.0</version>
	<packaging>war</packaging>
	<name>simpledemo</name>
	<properties>
		<docker.host>tcp://127.0.0.1:2375</docker.host>
	</properties>
	<dependencyManagement>
		<dependencies>
			<!-- JBoss distributes a complete set of Java EE 6 APIs including a Bill 
				of Materials (BOM). A BOM specifies the versions of a "stack" (or a collection) 
				of artifacts. We use this here so that we always get the correct versions 
				of artifacts. Here we use the jboss-javaee-6.0-with tools stack (you can 
				read this as the JBoss stack of the Java EE 6 APIs, with some extras tools 
				for your project, such as Arquillian for testing) -->
			<dependency>
				<groupId>org.jboss.bom</groupId>
				<artifactId>jboss-javaee-6.0-with-tools</artifactId>
				<version>1.0.4.Final-redhat-9</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.bom</groupId>
				<artifactId>eap6-supported-artifacts</artifactId>
				<version>6.3.0.GA</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.infinispan</groupId>
				<artifactId>infinispan-bom</artifactId>
				<version>6.1.0.Final-redhat-4</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>javax.enterprise</groupId>
			<artifactId>cdi-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<!-- Import the JAX-RS API, we use provided scope as the API is included 
			in JBoss AS 7 -->
		<dependency>
			<groupId>org.jboss.spec.javax.ws.rs</groupId>
			<artifactId>jboss-jaxrs-api_1.1_spec</artifactId>
			<scope>provided</scope>
		</dependency>
		<!-- JSON: to include json support (note json is not part of the JAX-RS 
			standard) -->
		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-jackson-provider</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-jaxrs</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<finalName>simpledemo</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jboss.as.plugins</groupId>
				<artifactId>jboss-as-maven-plugin</artifactId>
				<version>7.5.Final</version>
				<configuration>
					<hostname>localhost</hostname>
					<port>9999</port>
					<username>admin</username>
					<password>admin-123</password>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.4</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jolokia</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>0.13.3</version>
				<configuration>
					<images>
						<image>
							<name>tqvarnst/mysimpledemo</name>
							<alias>simpleApp</alias>
							<build>
								<from>ce-registry.usersys.redhat.com/jboss-eap-6/eap:6.4</from>
								<!-- <from>registry.access.redhat.com/jboss-eap-6/eap-openshift</from> -->
								<maintainer>Thomas Qvarnstrom &lt;tqvarnst@redhat.com&gt;</maintainer>
								<assembly>
									<basedir>/opt/eap/standalone/deployments</basedir>
									<descriptor>${basedir}/src/main/assembly.xml</descriptor>
								</assembly>
							</build>
							<run>
								<hostname>simpleApp.local</hostname>
								<namingStrategy>alias</namingStrategy>
								<ports>
									<port>8080:8080</port>
								</ports>
								<env>
									<JAVA_OPTS>-Xverify:none -Xms64m -Xmx256m -Dorg.apache.tomcat.util.LOW_MEMORY=true -XX:+UseCompressedOops -XX:+AggressiveOpts -XX:+DisableExplicitGC -Djava.net.preferIPv4Stack=true</JAVA_OPTS>
									<PRESERVE_JAVA_OPTS>true</PRESERVE_JAVA_OPTS>
								</env>
							</run>
						</image>
					</images>
				</configuration>
			</plugin>
		</plugins>

	</build>
	<repositories>
		<repository>
			<id>techpreview-all-repository</id>
			<name>Red Hat Enterprise Maven Repository</name>
			<url>http://maven.repository.redhat.com/techpreview/all/</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</repository>
	</repositories>

</project>